<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/titleButtonPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            tools:text="Test App"
            android:textSize="30sp"
            android:textAlignment="center" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">

            <Button
                android:text="@string/counterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/counterButton"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="counter"/>

            <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/counter"
                android:layout_row="0"
                android:layout_column="1"
                android:textAlignment="viewStart" />

            <CheckBox
                android:text="@string/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="checker"/>

            <TextView
                android:text="@string/checkOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkerText"
                android:layout_row="1"
                android:layout_column="1"/>

            <RadioGroup
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:text="@string/rbRed"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/redRB"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:text="@string/rbGreen"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/greenRB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:text="@string/rbBlue"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/blueRB" />
            </RadioGroup>


            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                android:layout_row="3"
                android:layout_column="0"/>

            <TextView
                android:text="@string/selectedItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectedItem"
                android:layout_row="3"
                android:layout_column="1"/>

            <Button
                android:text="@string/makeProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressButton"
                android:layout_row="4"
                android:layout_column="0"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/progressBar"
                android:layout_row="4"
                android:layout_column="1"/>

            <Switch
                android:text="@string/switchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
                android:layout_row="5"
                android:layout_column="0"
                />

            <TextView
                android:text="@string/switchOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchText"
                android:layout_row="5"
                android:layout_column="1"/>

        </GridLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/seekBar"
            android:id="@+id/ColourBox"
            />

    </LinearLayout>
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>